# transpiler

./: file_structure.txt  riscv_evm_vm.py  test_vm.py  vm_debugger.py
sol2risc-v/: LICENSE  README.md  example.txt  pyproject.toml  run_transpiler.bat
sol2risc-v/evm/: evm_bytecode_parser.py
sol2risc-v/src/: contract.s  output.asm  output.asm.json  output.elf  output.s
sol2risc-v/src/evm/: evm_parser.py  output.asm  output.asm.json
sol2risc-v/src/sol2riscv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sol2risc-v/src/transpiler/: __init__.py  arithmetic.py  context_manager.py  contract.disasm  contract_handler.py  disasm.txt  environment.py  evm_parser.py  gas_costs.py  gas_estimator.py  instruction_mapper.py  linker.ld  logger.py  logging.py  logging1.py  main.py  memory_model.py  opcode_mapping.py  optimizer.py  output.asm  output.elf  output.s  pattern.py  register_allocator.py  riscv_emitter.py  runtime.disasm  runtime.s  stack_emulator.py  stack_manager.py  types.py
sol2risc-v/src/utils/: constants.py  file_ops.py  hex_utils.py
sol2risc-v/src/vm/riscv_vm/: CMakeLists.txt  README.md
sol2risc-v/src/vm/riscv_vm/include/: cpu_state.hpp  elf_loader.hpp  executor.hpp  instruction_decoder.hpp  memory.hpp  riscv_vm.hpp  syscall_handler.hpp  types.hpp
sol2risc-v/src/vm/riscv_vm/src/: cpu_state.cpp  elf_loader.cpp  executor.cpp  instruction_decoder.cpp  main.cpp  memory.cpp  riscv_vm.cpp  syscall_handler.cpp
sol2risc-v/utils/: constants.py  logger.py
